# cyan-backend

./: .gitignore  CLAUDE.md  Cargo.toml  HARDEN_BACKEND_RUN.md  OVERNIGHT_RUN.md  PLUGIN_CREDENTIAL_ONBOARDING.md  PROGRESS.md  RESILIENCE_RUN.md  STATUS.md  STATUS_ANTI_ENTROPY.md  STATUS_BACKEND_MCP_TOOL.md  STATUS_BACKEND_MULTIUSER.md  STATUS_BOOTSTRAP_DISCOVERY_E2E.md  STATUS_CHAT_ATTACH.md  STATUS_DASHBOARD_QR.md  STATUS_DB_OPEN_FIX.md  STATUS_DEAD_CODE_SWEEP.md  STATUS_DEV_STACK.md  STATUS_DOCKER_RIG.md  STATUS_FILE_SWARM_CONSUMER.md  STATUS_GRANT_REPLAY_FIX.md  STATUS_IDENTITY_GRANTS.md  STATUS_MCP_LOCAL_HOST.md  STATUS_MESH_CATCHUP_EXPORT.md  STATUS_MESH_HARNESS.md  STATUS_MESH_LINT.md  STATUS_MESH_SEED_ROSTER.md  STATUS_MESH_TRANSPORT.md  STATUS_OFFLINE_FIX.md  STATUS_OVERNIGHT.md  STATUS_PRESENCE_FIX.md  STATUS_R10FB_BACKEND.md  STATUS_R11_BACKEND.md  STATUS_R12_ANTI_ENTROPY_C3.md  STATUS_R12_BACKEND.md  STATUS_RESILIENCE.md  STATUS_ROUND10_DISTWF.md  STATUS_ROUND8_GATING.md  STATUS_ROUND8_HARNESS.md  STATUS_ROUND8_NOTES.md  (+19 more)
.github/workflows/: ci.yml
harness/: .env.example  .gitignore  Dockerfile.bootstrap  Dockerfile.node  Dockerfile.relay  Makefile  README.md  docker-compose.yml  live.md  live.sh  stress.sh
harness/.ctx-bootstrap/xaeroflux/: Cargo.toml
harness/.ctx-bootstrap/xaeroflux/src/: lib.rs  rendezvous.rs  snapshot.rs  swarm.rs
harness/.ctx-bootstrap/xaeroflux/tests/: rendezvous_publish.rs  substrate_mesh.rs  substrate_reliability.rs  substrate_snapshot.rs  substrate_swarm.rs
harness/.ctx-bootstrap/xaeroflux/tests/support/: mod.rs
harness/scripts/: assemble-bootstrap-context.sh  assemble-context.sh  shape.sh  ws-entrypoint.sh
scripts/: crux_plugin_run.py  crux_vllm_stub.py  dev_stack.sh  reliability.sh  verify_merge.sh
src/: ai_bridge.rs  anti_entropy.rs  asset_registry.rs  batch_confirm.rs  changelist.rs  chat_lens_relay.rs  conform_dispatch.rs  conform_map.rs  constitution.rs  constitution_hard.rs  cyan_lens_client.rs  dashboard.rs  device_vault.rs  diagram_gen.rs  exec_plan.rs  frameio_refresh.rs  group_bundle.rs  group_rekey.rs  inbound.rs  ingest.rs  ingest_connectors.rs  lens_commands.rs  lib.rs  licensing.rs  llm.rs  llm_proposer.rs  mcp_host.rs  media_staging.rs  mesh_invoke.rs  metrics.rs  note_inference.rs  note_payload.rs  notes_rbac.rs  ops_eval.rs  ops_proposer.rs  pipeline.rs  pipeline_executor.rs  plugin_config.rs  rendezvous.rs  review_loop.rs  (+16 more)
src/actors/: discovery_actor.rs  network_actor.rs  topic_actor.rs
src/ffi/: core.rs  mod.rs  scaffold.rs
src/identity/: mesh.rs  mod.rs  qr.rs
src/models/: commands.rs  core.rs  dto.rs  events.rs  mod.rs  node_config.rs  protocol.rs
src/skills/: ad_splice.rs  cyan_dm.rs  github.rs  jira.rs  localization.rs  media.rs  mod.rs  qc_fix.rs  ssai.rs
tests/: asset_class_test.rs  asset_registry_test.rs  authored_ledger_test.rs  batch_confirm_test.rs  board_keyed_media_info_test.rs  board_video_media_test.rs  catchup_export_test.rs  changelist_portability_test.rs  changelist_test.rs  chat_lens_relay_test.rs  conform_dispatch_test.rs  conform_in_loop_test.rs  conform_map_test.rs  constitution_hard_test.rs  constitution_hash_test.rs  constitution_lens_rail_test.rs  constitution_project_scope_test.rs  constitution_resolved_test.rs  constitution_role_link_test.rs  constitution_test.rs  create_group_default_board_test.rs  crux_smoke.rs  dashboard_test.rs  delta_sync_test.rs  device_vault_test.rs  frameio_c2c_live_test.rs  grant_test.rs  inbound_poll_test.rs  ingest_test.rs  legal_clearance_test.rs  licensing_test.rs  llm_proposer_test.rs  local_prefs_test.rs  mcp_host_test.rs  mcp_tool_test.rs  mesh_invoke_test.rs  network_actor_test.rs  notes_payload_test.rs  notes_project_scope_test.rs  notes_rbac_mesh_test.rs  (+73 more)
tests/fixtures/: batch_note_id_vectors.json
tests/support/: dockernode.rs  mod.rs  multiprocess.rs
