[package]
name = "cyan-backend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

# ═══════════════════════════════════════════════════════════════════════════
# TEST BINARIES
# ═══════════════════════════════════════════════════════════════════════════

[[bin]]
name = "network_test"
path = "tests/network_actor_test.rs"

[[bin]]
name = "snapshot_test"
path = "tests/snapshot_protocol_test.rs"


[[bin]]
name = "delta_test"
path = "tests/delta_sync_test.rs"

# Test-only peer binary for the in-process->multi-process substrate snapshot rig
# (tests/substrate_snapshot_mp.rs). Each instance boots a NetworkActor against its
# OWN sqlite DB so per-node storage assertions are honest. Uses only the public API.
[[bin]]
name = "cyan_node"
path = "src/bin/cyan_node.rs"


[dependencies]
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
thiserror = "1.0"
xaeroai = { path = "../xaeroai" }
xaeroid = { path = "../xaeroid" }
cyan-backend-integrations = { path = "../cyan-backend-integrations" }
tokio = { version = "1.40", features = ["full"] }
once_cell = "1.20"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"
anyhow = "1.0"
bytes = "1.7"
futures = "0.3"
futures-lite = "2.6.1"
rand = "0.8"
dirs = "5.0.1"
tempfile = "3"

# Iroh dependencies
iroh = { version = "0.95", features = ["discovery-local-network"] }
iroh-gossip = "0.95"
iroh-blobs = "0.97"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand_chacha = "0.9.0"
iroh-relay = "0.95.1"
time = "0.3.44"
hex = "0.4.3"
base64 = "0.22.1"
pdf-extract = "0.7"
petgraph = "0.8.3"
async-trait = "0.1.89"
glob = "0.3"
