[package]
name = "cyan-backend"
version = "0.1.0"
edition = "2024"

# Ban `unwrap`/`expect`-style panics in engine + FFI code. `unwrap_used` is the
# purpose-built lint (it skips external-macro unwraps like `serde_json::json!` and
# honors `allow-unwrap-in-tests` in clippy.toml), replacing the old
# `disallowed-methods` approach which spuriously flagged ~970 `json!` sites. See
# clippy.toml and STATUS_MESH_LINT.md.
[lints.clippy]
unwrap_used = "warn"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

# ═══════════════════════════════════════════════════════════════════════════
# TEST BINARIES
# ═══════════════════════════════════════════════════════════════════════════

[[bin]]
name = "network_test"
path = "tests/network_actor_test.rs"

[[bin]]
name = "snapshot_test"
path = "tests/snapshot_protocol_test.rs"


[[bin]]
name = "delta_test"
path = "tests/delta_sync_test.rs"

# Test-only peer binary for the in-process->multi-process substrate snapshot rig
# (tests/substrate_snapshot_mp.rs). Each instance boots a NetworkActor against its
# OWN sqlite DB so per-node storage assertions are honest. Uses only the public API.
[[bin]]
name = "cyan_node"
path = "src/bin/cyan_node.rs"


[dependencies]
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
thiserror = "1.0"
xaeroid = { path = "../xaeroid" }
cyan-mcp = { path = "../cyan-mcp" }
# Round 8 / W11 — licensing. The entitlement model + EntitlementPolicy gate +
# signed token primitives live in cyan-identity (branch `feat/round8-license`).
# Path dep against the sibling checkout; see STATUS_ROUND8_GATING.md for the
# branch-reconcile note.
cyan-identity = { path = "../cyan-identity" }
secrecy = "0.8"
tokio = { version = "1.40", features = ["full"] }
once_cell = "1.20"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"
anyhow = "1.0"
bytes = "1.7"
futures = "0.3"
futures-lite = "2.6.1"
rand = "0.8"
dirs = "5.0.1"
tempfile = "3"

# Iroh dependencies
iroh = { version = "0.95", features = ["discovery-local-network"] }
iroh-gossip = "0.95"
iroh-blobs = "0.97"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand_chacha = "0.9.0"
iroh-relay = "0.95.1"
time = "0.3.44"
hex = "0.4.3"
base64 = "0.22.1"
pdf-extract = "0.7"
petgraph = "0.8.3"
async-trait = "0.1.89"
glob = "0.3"
# §11 portable group export — encrypt the bundle to the invitee (X25519 sealed box).
# Already in the tree transitively via iroh 0.95; we only enable its `seal` feature,
# so this adds no new crate, just the anonymous sealed-box API.
crypto_box = { version = "0.10.0-pre.0", features = ["seal"] }

[dev-dependencies]
# The `testing` feature exposes the embedded RS256 keypair + entitlement
# minter/verifier fakes so the licensing tests sign/verify with no real broker.
cyan-identity = { path = "../cyan-identity", features = ["testing"] }
