[package]
name = "xaeroflux"
version = "1.0.0"
edition = "2024"
description = "a decentralized, p2p, offline first event log built on tokio, rusqlite and iroh"
license = "MPL-2.0"

[[bin]]
name = "xaeroflux_bootstrap"
path = "src/bin/xaeroflux_bootstrap.rs"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
once_cell = "1.20"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"
anyhow = "1.0"
hex = "0.4"
bytes = "1.7"
futures = "0.3"
rand = "0.8"
getrandom = "0.3.4"

# Iroh dependencies
iroh = { version = "0.95", features = ["discovery-local-network"] }
iroh-gossip = "0.95"
iroh-blobs = "0.97"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand_chacha = "0.9.0"
iroh-relay = "0.95.1"

# Iggy message broker (for forwarding events to Cyan Lens)
iggy = "0.6"

# Dev-only: substrate test harness (tests/substrate_*.rs, tests/support/).
# Additive — compiled only for tests; does not affect the library or xaeroflux_bootstrap binary.
[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
bytes = "1.7"
futures = "0.3"
iroh = { version = "0.95", features = ["discovery-local-network"] }
iroh-gossip = "0.95"
